<resources>
    <!-- Strings related to DabaseActivity-->
    <string name="app_name" translatable="false">Easy Learn</string>
    <string name="intro_text" translatable="false">Seleziona la materia</string>
    <string name="fisica" translatable="false">FISICA</string>
    <string name="matematica" translatable="false">MATEMATICA</string>
    <string name="chimica" translatable="false">CHIMICA</string>
    <string name="administratorString" translatable="false">SEI APPENA LOGGATO COME AMMINISTRATORE, PER EFFETTUARE
                DELLE OPERAZIONI COLLEGATI AL NOSTRO SITO WEB</string>


    <string name="fisica_description" translatable="false">Lezioni di fisica per studenti delle superiori con integrazioni in laboratorio.</string>
    <string name="matematica_description" translatable="false">Lezioni di matematica con aiuto compiti.</string>
    <string name="chimica_description" translatable="false">Lezioni di chimica ma è facile tanto la sanno tutti :D</string>

    <string name="fisica_request_message" translatable="false">Hai prenotato Fisica!</string>
    <string name="matematica_request_message" translatable="false">Hai prenotato Matematica!</string>
    <string name="chimica_request_message" translatable="false">Hai prenotato Chimica!</string>

    <string-array name="orari">
        <item>XX-XX</item>
        <item>15-16</item>
        <item>16-17</item>
        <item>17-18</item>
        <item>18-19</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="seleziona_il_giorno">Seleziona il giorno</string>
    <string name="materieString">Seleziona la materia</string>
    <string name="select_teacher">Seleziona il docente</string>
    <string name="selezionaOrario">Seleziona l\'orario</string>
    <string name="visualizzo_ripetizione">Visualizzo ripetizione selezionata</string>
    <string name="android_description">ANDROID</string>
    <string name="programmazione_description">PROGRAMMAZIONE</string>
    <string name="so_description">SISTEMI OPERAIVI</string>
    <string name="conferma">CONFERMA</string>
    <string name="visualizza_le_tue_ripetizioni_prenotate">Visualizza le tue ripetizioni prenotate</string>
    <string name="prenota_una_ripetizione">Prenota una ripetizione</string>
    <string name="torna_alla_home">Torna alla home</string>
    <string name="stato_prenotazione">Stato prenotazione</string>
    <string name="le_tue_prenotazioni">Le tue prenotazioni attive</string>
    <string name="seleziona_la_ripetizione_che_vuoi_cancellare">Seleziona la ripetizione che vuoi cancellare</string>
    <string name="lista_ripetizioni">Lista ripetizioni</string>
    <string name="cancella">CANCELLA</string>
    <string name="lista_scadute">Lista prenotazioni scadute</string>
    <string name="le_tue_prenotazioni_scadute">Le tue prenotazioni scadute</string>
    <string name="lista_cancellazioni">Lista cancellazioni</string>
    <string name="ripetizioni_che_hai_cancellato">Ripetizioni che hai cancellato</string>
    <string name="username">username</string>
    <string name="accedi">Accedi</string>
    <string name="login">LOGIN</string>
    <string name="password">password</string>
    <string name="luned">LUNEDÍ</string>
    <string name="marted">MARTEDÍ</string>
    <string name="mercoled">MERCOLEDÍ</string>
    <string name="gioved">GIOVEDÍ</string>
    <string name="venerd">VENERDÍ</string>
    <string name="docente_1">Docente 1</string>
    <string name="docente_2">Docente 2</string>
    <string name="continua_senza_login">Continua senza login</string>
    <string name="catalogo">Catalogo</string>
    <string name="lista_ripetizioni_disponibili">Lista ripetizioni disponibili</string>
    <string name="accedi_al_nostro_portale">Accedi al nostro portale</string>
    <string name="seleziona_il_docente">Seleziona il docente</string>
</resources>
